resources/certMgr-selfsigned.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cert-manager
