resources/netshoot-cert.yaml
apiVersion: v1
kind: Pod
metadata:
  name: netshoot
  labels:
    name: netshoot
spec:
  containers:
    - image: nicolaka/netshoot
      name: netshoot-container
      command:
        - sh
        - "-c"
        - |
          /bin/sh <<'EOT'
          date
          ls -lsa /cert
          cat /cert/tls.crt
          cat /cert/tls.key
          EOT
      volumeMounts:
        - name: registry-cert
          mountPath: /cert/
          readOnly: true
  volumes:
    - name: registry-cert
      secret:
        secretName: registry-ingress-tls
