resources/registry-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docker-registry
  namespace: registry-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: docker-registry
  template:
    metadata:
      labels:
        app: docker-registry
    spec:
      containers:
        - name: docker-registry-container
          image: registry:2
          ports:
            - name: http
              containerPort: 5000
          volumeMounts:
            - name: image-store
              mountPath: /var/lib/registry
            # TLS (might be terminated at ingress controller)
            #- name: registry-cert
            #  mountPath: /cert/
            #  readOnly: true
      volumes:
        - name: image-store
          emptyDir: {}
        # TLS (might be terminated at ingress controller)
        #- name: registry-cert
        #  secret:
        #    secretName: docker-registry-tls
        #    #secretName: selfsigned-cert
