resources/registry-service-external.yaml
apiVersion: v1
kind: Service
metadata:
  name: docker-registry
spec:
  type: ExternalName
  externalName: docker-registry.registry-ns.svc.cluster.local
  ports:
    - port: 5000
