resources/registry-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: registry-ingress
  namespace: registry-ns
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.kubernetes.io/rewrite-target: /
    #cert-manager.io/cluster-issuer: "issuer-selfsigned"
    #traefik.ingress.kubernetes.io/preserve-host: "true"
    #
    # useless:
    #traefik.ingress.kubernetes.io/service.serversscheme: https
    #traefik.ingress.kubernetes.io/ssl-redirect: "true"
    #nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  # tls section terminates TLS at the ingress controller
  tls:
    - hosts:
        - registry.hoffimuc.com
      secretName: docker-registry-tls
      #secretName: selfsigned-cert
  rules:
    - host: registry.hoffimuc.com
      http:
        paths:
          - backend:
              serviceName: docker-registry
              servicePort: 5000
            path: /
