resources/whoami-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: whoami-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/rule-type: "PathPrefixStrip"
spec:
  rules:
  - host: whoami.mycluster.tld
    http:
      paths:
      - path: /
        backend:
          serviceName: whoami-service
          servicePort: 8888
